Fix code blocks overflowing content.  (#777)

--- a/styles/theme-base.css
+++ b/styles/theme-base.css
@@ -552,6 +552,10 @@ dl dd {
     padding:0 1.5rem;
 }
 
+.php8-code.phpcode{
+    overflow-x: auto;
+}
+
 .phpcode, div.classsynopsis {
     text-align: left;
 }
@@ -1313,6 +1317,7 @@ div.tip p:first-child {
 .docs .example-contents.screen,
 .informalexample .literallayout {
     padding: .75rem;
+    overflow-x: auto;
 }
 
 .docs .classsynopsis,
@@ -1325,6 +1330,7 @@ div.tip p:first-child {
 
 .docs .phpcode code {
     display: block;
+    overflow-x: auto;
 }
 
 .docs .qandaentry dt .phpcode * {
